corrected grammatical error

--- a/Analyzing_NYC_High_School_Data.ipynb
+++ b/Analyzing_NYC_High_School_Data.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Main Objective: Investigate the factors that possible affect the SAT scores of students at NYC high schools.  "
+    "Main Objective: Investigate the factors that possibly affect the SAT scores of students at NYC high schools.  "
    ]
   },
   {
